# Solar-System

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml  release.yml
include/: CMakeLists.txt  CelestialBody.h  Game.h  Input.h  Simulation.h  UI.h  Window.h
resources/assets/res/: Solar-System.rc
src/: CMakeLists.txt  CelestialBody.cpp  GUI.cpp  Game.cpp  Input.cpp  MilkyWay.cpp  Simulation.cpp  SolarSystem.cpp  UI.cpp  Window.cpp  main.cpp
